# chirabot

./: .gitignore  README.md  data.db  main.py  pyproject.toml
src/plugins/: about.py  ciallo.py  friend_add.py  hello.py
src/plugins/dayspoem/: __init__.py  dayspoem.py
src/plugins/deepseek/: __init__.py  config.py  deepseek.py
src/plugins/heweather/: __init__.py
src/plugins/weather/: __init__.py  weather.py
