[project]
name = "chirabot"
version = "0.1.0"
description = "chirabot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-genshinuid>=4.8.2",
    "nonebot2[fastapi]>=2.4.2",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["GenshinUID"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
